--- a/css/main.css
+++ b/css/main.css
@@ -28,8 +28,11 @@
 #form_wrapper .form-row {
   width: 100%;
   padding: 5px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-content: flex-start;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
 }
 
 #form_wrapper .form-row span {
@@ -44,16 +47,41 @@
   padding-bottom: 10px;
 }
 
-#return_list {
-  padding: 0;
+#results .banner {
+  font-size: 1.2em;
+  margin: 10px;
+  font-weight: 800;
+}
+
+#results .form-row {
+  padding-top: 20px;
+}
+
+#results #school_info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#results #school_info .school-image {
+  max-width: 28%;
+}
+
+#results #return_list {
+  padding: 0 10px;
   font-weight: 700;
 }
 
-#return_list li {
+#results #return_list li {
   list-style: none;
 }
 
-#return_list #no_results {
+#results #return_list .results-label {
+  font-weight: 400;
+  padding-right: 10px;
+}
+
+#results #no_results {
   color: red;
   font-style: italic;
 }
