--- a/views/index.pug
+++ b/views/index.pug
@@ -26,7 +26,7 @@ html
                                 .col-auto(class="my-1")
                                     label.mr-sm-2(for="inlineFormCustomSelect") Grade
                                     select#grade(class="custom-select mr-sm-2" name="grade")
-                                        - const grades = ["K", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12"]
+                                        - const grades = ["Transitional Kindergarten","K", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12"]
                                         for grade in grades
                                             option(value=grade) #{grade}
                             .form-row.hidden(id="address_segments")
@@ -71,7 +71,7 @@ html
                                                 - const fields = [ { name: "School", id: "school_name", content: school.name }, { name: "Phone Number", id: "school_number", content: school.location.schoolPhone}, { name: "Address", id: "school_address", content: `${school.location.schoolAddress} ${school.location.schoolCity}, ${school.location.schoolState} ${school.location.schoolZip}`}]
                                                 each field in fields
                                                     li
-                                                        label.results-label #{field.name}: 
+                                                        label.results-label #{field.name}:
                                                         span.wideField(id=field.id)  #{field.content}
                                                 if school.www
                                                     li
