--- a/views/index.pug
+++ b/views/index.pug
@@ -26,7 +26,7 @@ html
                                 .col-auto(class="my-1")
                                     label.mr-sm-2(for="inlineFormCustomSelect") Grade
                                     select#grade(class="custom-select mr-sm-2" name="grade")
-                                        - const grades = ["Transitional Kindergarten","K", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12"]
+                                        - const grades = ["Transitional Kindergarten","K", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "Continuation School"]
                                         for grade in grades
                                             option(value=grade) #{grade}
                             .form-row.hidden(id="address_segments")
