--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,5 @@
 #form_wrapper {
-  width: 100%;
+  width: 500px;
   max-width: 600px;
   #location {
     width: 80%;
@@ -7,7 +7,7 @@
     margin-bottom: 5px;
   }
   #address_table {
-    max-width: 360px;
+    max-width: 500px;
 
     #street_number {
       width: 20px;
