--- a/css/main.scss
+++ b/css/main.scss
@@ -47,7 +47,15 @@
     margin: 10px;
     font-weight: 800;
   }
+  
+.col-sm-offset-2 {
+    margin-left: 7%;
+}
 
+@media (min-width: 992px)
+.col-md-offset-3 {
+    margin-left: 7%;
+}
   .form-row {
     padding-top: 20px;
   }
