--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,32 @@
 #form_wrapper {
   width: 500px;
   max-width: 600px;
+  margin-left: 15px;
 }
 
 #form_wrapper #location {
   width: 80%;
   display: block;
   margin-bottom: 5px;
+  margin-left: 15px;
+
+}
+
+.mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2
+  margin-left: 15px;
 }
 
 #form_wrapper #address_table {
   max-width: 360px;
+  margin-left: 15px;
+}
+
+.col-sm-offset-2 {
+    margin-left: 0% !important;
+}
+
+.col-md-offset-3 {
+    margin-left: 7% important;
 }
 
 #form_wrapper #address_table #street_number {
@@ -30,6 +46,7 @@
   padding: 5px 0;
   display: -webkit-box;
   display: -ms-flexbox;
+  margin-left: 15px;
   display: flex;
   -ms-flex-line-pack: start;
       align-content: flex-start;
